# trimod_gripper

./: .gitignore  CMakeLists.txt  package.xml
cfg/: comau_clusterizer.cfg  lwr_manual_photographer.cfg
controllers/: controllers.yaml
gripper/: finger.urdf.xacro  single_trimod.urdf.xacro  single_trimod_up.urdf.xacro  trimod.urdf.xacro  utils.urdf.xacro
gui/build-gui_test-Desktop_Qt_5_5_0_GCC_64bit-Debug/: Makefile  gui_test  moc_mainwindow.cpp  ui_mainwindow.h
gui/gui_test/: gui_test.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
launch/: gripper_test.launch  gripper_test_h.launch
meshes/: Link0.stl  Link0_convex.stl  Link1.stl  Link1_convex.stl  Link2.stl  Link2_convex.stl
meshes/assets/: Link0.blend  Link1.blend  Link2.blend
src/: comau_clusterizer.cpp  lwr_manual_photographer.cpp  lwr_udp_to_controllers.cpp  test.cpp
trimod_gripper_project/nbproject/: configurations.xml  project.xml
trimod_gripper_project/nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
